[gd_scene load_steps=19 format=3 uid="uid://cgv4lf0kx6w7v"]

[ext_resource type="Script" path="res://LevelScene.gd" id="1_j753e"]
[ext_resource type="PackedScene" uid="uid://b3od17wge7lqd" path="res://road_curve_pavement.tscn" id="2_gx04i"]
[ext_resource type="Texture2D" uid="uid://n8vugfyvhly5" path="res://addons/kenney_prototype_textures/dark/texture_08.png" id="3_vns38"]
[ext_resource type="PackedScene" uid="uid://dw66fdb43t45x" path="res://road_straight.tscn" id="3_vpkgs"]
[ext_resource type="Texture2D" uid="uid://cdbbvfuvnpfiq" path="res://addons/kenney_prototype_textures/green/texture_06.png" id="6_qdto8"]
[ext_resource type="PackedScene" uid="uid://bqh1hsknnpkpd" path="res://street_light.tscn" id="7_u2acp"]
[ext_resource type="PackedScene" uid="uid://daqjbvugdysgv" path="res://arcade_car.tscn" id="8_ydwh2"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_w1mke"]
sky_top_color = Color(0, 0.592157, 0.792157, 1)
sky_horizon_color = Color(0.752941, 0.529412, 1, 1)
sky_curve = 0.126135
sky_energy_multiplier = 3.04

[sub_resource type="Sky" id="Sky_rckia"]
sky_material = SubResource("ProceduralSkyMaterial_w1mke")

[sub_resource type="Environment" id="Environment_jpiew"]
background_mode = 2
sky = SubResource("Sky_rckia")

[sub_resource type="CameraAttributesPhysical" id="CameraAttributesPhysical_641dl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lu3bm"]
albedo_color = Color(0.443137, 0.815686, 1, 1)
albedo_texture = ExtResource("3_vns38")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_yp0e0"]
material = SubResource("StandardMaterial3D_lu3bm")
size = Vector3(1000, 1, 1000)

[sub_resource type="BoxShape3D" id="BoxShape3D_k2e17"]
size = Vector3(1000, 1, 1000)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tl17i"]
albedo_texture = ExtResource("6_qdto8")

[sub_resource type="BoxMesh" id="BoxMesh_7fv3o"]
material = SubResource("StandardMaterial3D_tl17i")

[sub_resource type="BoxShape3D" id="BoxShape3D_b6qfa"]
size = Vector3(4.01558, 11.6766, 23.0557)

[sub_resource type="BoxMesh" id="BoxMesh_fstgc"]
size = Vector3(20, 20, 20)

[node name="LevelScene" type="Node3D"]
script = ExtResource("1_j753e")
PlayerScene = ExtResource("8_ydwh2")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jpiew")
camera_attributes = SubResource("CameraAttributesPhysical_641dl")

[node name="Ground" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("BoxMesh_yp0e0")

[node name="GroundStaticBody" type="StaticBody3D" parent="Ground"]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/GroundStaticBody"]
shape = SubResource("BoxShape3D_k2e17")

[node name="Roads" type="Node3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1, 0, 0, 0, 1.5, 0, 0, 0)

[node name="road_curvePavement" parent="Roads" instance=ExtResource("2_gx04i")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -103.577, 0, -6.54763)

[node name="road_curvePavement3" parent="Roads" instance=ExtResource("2_gx04i")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, 8.75133, 0, 0.996839)

[node name="road_curvePavement2" parent="Roads" instance=ExtResource("2_gx04i")]
transform = Transform3D(1.19249e-07, 0, -10, 0, 5, 0, 10, 0, 1.19249e-07, -96.1099, 0, -138.95)

[node name="road_straight" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, 1.38292, 0, -1.51943)

[node name="road_straight2" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -8.61708, 0, -1.51943)

[node name="road_straight3" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -18.6171, 0, -1.51943)

[node name="road_straight4" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -28.6171, 0, -1.51943)

[node name="road_straight5" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -38.6171, 0, -1.51943)

[node name="road_straight6" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -48.6171, 0, -1.51943)

[node name="road_straight7" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -58.6171, 0, -1.51943)

[node name="road_straight8" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -68.6171, 0, -1.51943)

[node name="road_straight9" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -78.6171, 0, -1.51943)

[node name="road_straight10" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -88.6171, 0, -1.51943)

[node name="road_straight11" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -13.9922)

[node name="road_straight12" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -23.9922)

[node name="road_straight13" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -33.9922)

[node name="road_straight14" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -43.9922)

[node name="road_straight15" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -53.9922)

[node name="road_straight16" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -63.9922)

[node name="road_straight17" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -73.9922)

[node name="road_straight18" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -83.9922)

[node name="road_straight19" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -93.9922)

[node name="road_straight20" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -103.992)

[node name="road_straight21" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -113.992)

[node name="road_straight22" parent="Roads" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -123.992)

[node name="Node3D" type="Node3D" parent="Roads"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -87.3, 0, -286.65)

[node name="road_curvePavement2" parent="Roads/Node3D" instance=ExtResource("2_gx04i")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -103.577, 0, -155.214)

[node name="road_straight23" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, 1.38292, 0, -150.186)

[node name="road_straight24" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -8.61708, 0, -150.186)

[node name="road_straight25" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -18.6171, 0, -150.186)

[node name="road_straight26" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -28.6171, 0, -150.186)

[node name="road_straight27" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -38.6171, 0, -150.186)

[node name="road_straight28" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -48.6171, 0, -150.186)

[node name="road_straight29" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -58.6171, 0, -150.186)

[node name="road_straight30" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -68.6171, 0, -150.186)

[node name="road_straight31" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -78.6171, 0, -150.186)

[node name="road_straight32" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 10, -88.6171, 0, -150.186)

[node name="road_straight33" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -162.659)

[node name="road_straight34" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -172.659)

[node name="road_straight35" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -182.659)

[node name="road_straight36" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -192.659)

[node name="road_straight37" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -202.659)

[node name="road_straight38" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -212.659)

[node name="road_straight39" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -222.659)

[node name="road_straight40" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -232.659)

[node name="road_straight41" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -242.659)

[node name="road_straight42" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -252.659)

[node name="road_straight43" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -262.659)

[node name="road_straight44" parent="Roads/Node3D" instance=ExtResource("3_vpkgs")]
transform = Transform3D(-4.37114e-07, 0, 10, 0, 5, 0, -10, 0, -4.37114e-07, -116.1, 9.53674e-07, -272.659)

[node name="SpawnPoints" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.87442, 0)

[node name="0" type="Node3D" parent="SpawnPoints" groups=["SpawnPoints"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 97, 2, -97)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SpawnPoints/0"]
layers = 2
mesh = SubResource("BoxMesh_7fv3o")

[node name="1" type="Node3D" parent="SpawnPoints" groups=["SpawnPoints"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 97, 2, -103)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SpawnPoints/1"]
layers = 2
mesh = SubResource("BoxMesh_7fv3o")

[node name="2" type="Node3D" parent="SpawnPoints" groups=["SpawnPoints"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 97, 2, -109)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SpawnPoints/2"]
layers = 2
mesh = SubResource("BoxMesh_7fv3o")

[node name="3" type="Node3D" parent="SpawnPoints" groups=["SpawnPoints"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 105, 2, -109)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SpawnPoints/3"]
layers = 2
mesh = SubResource("BoxMesh_7fv3o")

[node name="4" type="Node3D" parent="SpawnPoints" groups=["SpawnPoints"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 105, 2, -103)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SpawnPoints/4"]
layers = 2
mesh = SubResource("BoxMesh_7fv3o")

[node name="5" type="Node3D" parent="SpawnPoints" groups=["SpawnPoints"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 105, 2, -97)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SpawnPoints/5"]
layers = 2
mesh = SubResource("BoxMesh_7fv3o")

[node name="GameTimer" type="Timer" parent="."]

[node name="FinishLine" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26.6215, 0, 0)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="FinishLine"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -39.381, 4.43917, 8.96647)
shape = SubResource("BoxShape3D_b6qfa")

[node name="MeshInstance3D" type="MeshInstance3D" parent="FinishLine/CollisionShape3D"]
transform = Transform3D(0.219617, 0, 0, 0, 1, 0, 0, 0, 1.14688, 0, 0, 0)
visible = false
mesh = SubResource("BoxMesh_fstgc")

[node name="Decorations" type="Node3D" parent="."]

[node name="street light" parent="." instance=ExtResource("7_u2acp")]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 0, 2.19397)

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="body_entered" from="FinishLine" to="." method="_on_finish_line_body_entered"]
